--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,3 @@
-@charset "UTF-8";
-/** Этот файл обнуляет стандартные отступы и отступы отступов,  */
-/** устанавливает базовый размер шрифта в 100%,  */
-/** убирает стили списков и т. д. */
-/*! Reset styles */
-/* *,
-*::before,
-*::after {
-    box-sizing: inherit;
-} */
 body {
   margin: 0;
 }
@@ -55,6 +45,24 @@ body {
 .container {
   width: 905px;
   margin: 0 auto;
+  outline: 1px solid red;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    outline: 1px solid blue;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    outline: 1px solid green;
+  }
 }
 
 .buttons, .gallery .container .gallery__button-firts {
