--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -1,5 +1,18 @@
 .container {
     width: 905px;
     margin: 0 auto;
-    // outline: 1px solid red; 
+    outline: 1px solid red; 
+    @media screen and (min-width: 480px) {
+        width: 480px;
+    }
+    
+    @media screen and (min-width: 768px) {
+        width: 768px;
+        outline: 1px solid blue;
+    }
+    
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+        outline: 1px solid green;
+    }
 }
