Upgrade width and button

--- a/sass/layout/_01-header.scss
+++ b/sass/layout/_01-header.scss
@@ -5,7 +5,7 @@
     // background-color: rgb(255, 235, 211);
 
     .nav-list {
-        width: 555px;
+        // width: 555px;
         margin: 0 auto;
         // -----------------------------------------
         //? CSS flex
