--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ body {
   }
 }
 
-.buttons, .gallery .container .gallery__button-firts {
+.buttons {
   align-self: center;
   padding: 20px 48px 21px 48px;
   font-size: 1.5rem;
@@ -77,7 +77,6 @@ body {
   padding-bottom: 92px;
 }
 .header .nav-list {
-  width: 555px;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -148,16 +147,11 @@ body {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .gallery .container .gallery__button-firts {
-  margin-top: 90px;
-  color: red;
-  background-color: aqua;
-}
-.gallery .container .gallery__button-second {
   align-self: center;
-  padding: 20px 48px 21px 48px;
-  font-size: 1.5rem;
-  background-color: inherit;
-  margin-top: 10px;
-  color: aqua;
-  background-color: red;
+  margin-top: 94px;
+  width: 165px;
+  height: 60px;
+  font-weight: 400;
+  font-size: 14px;
+  color: #626262;
 }/*# sourceMappingURL=main.css.map */
