--- a/css/main.css
+++ b/css/main.css
@@ -79,8 +79,20 @@ body {
 .header .nav-list {
   margin: 0 auto;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .header .nav-list {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header .nav-list {
+    justify-content: space-around;
+    flex-direction: row;
+  }
 }
 .header .nav-list__link {
   text-transform: lowercase;
