--- a/css/main.css
+++ b/css/main.css
@@ -84,14 +84,14 @@ body {
 }
 @media screen and (min-width: 768px) {
   .header .nav-list {
-    flex-direction: row;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 @media screen and (min-width: 1200px) {
   .header .nav-list {
-    justify-content: space-around;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 .header .nav-list__link {
