--- a/css/main.css
+++ b/css/main.css
@@ -85,13 +85,16 @@ body {
 @media screen and (min-width: 768px) {
   .header .nav-list {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    text-align: center;
   }
 }
 @media screen and (min-width: 1200px) {
   .header .nav-list {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 }
 .header .nav-list__link {
