--- a/sass/layout/_01-header.scss
+++ b/sass/layout/_01-header.scss
@@ -8,11 +8,14 @@
         align-items: center;
         @media screen and (min-width:768px){
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: 1fr 1fr;
+            gap: 30px;
+            text-align: center;
         }
         @media screen and (min-width:1200px){
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
         }
         &__link {
             text-transform: lowercase;
