--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,7 @@ body {
   position: absolute;
   right: 0;
   transition: 0.3s;
+  border-radius: 15px;
 }
 @media screen and (min-width: 768px) {
   .header label {
@@ -109,11 +110,37 @@ body {
   }
 }
 
-.nav-list {
-  margin: 0 auto;
+input[type=checkbox]:checked ~ .nav-list {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
+}
+
+input[type=checkbox]:checked ~ label span {
+  transform: rotate(45deg);
+}
+
+input[type=checkbox]:checked ~ label span::before {
+  top: 0;
+  transform: rotate(0);
+}
+
+input[type=checkbox]:checked ~ label span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+
+.nav-list li {
+  margin: 15px 0;
+}
+
+.nav-list {
+  display: none;
+  top: 100px;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  margin: 0 auto;
 }
 @media screen and (min-width: 768px) {
   .nav-list {
